--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,12 @@
     "storage",
     "notifications",
     "alarms",
-    "tabs"
+    "tabs",
+    "scripting",
+    "activeTab"
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ],
   "action": {
     "default_popup": "src/pages/popup/popup.html",
@@ -27,7 +32,8 @@
     "resources": [
       "src/games/*",
       "src/lib/*",
-      "src/assets/*"
+      "src/assets/*",
+      "src/floating/*"
     ],
     "matches": ["<all_urls>"]
   }],
