--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
     "default_icon": "src/assets/icons/clock1.png"
   },
   "background": {
-    "service_worker": "src/background/background.js"
+    "service_worker": "src/background/background.js",
+    "type": "module"
   },
   "options_page": "src/pages/options/options.html",
   "icons": {
@@ -31,7 +32,9 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": ["src/floating/content_script.js"],
-    "run_at": "document_idle"
+    "run_at": "document_idle",
+    "all_frames": true,
+    "match_about_blank": true
   }],
   "web_accessible_resources": [{
     "resources": [
